# graph-fleet

./: .bazelrc  .env.example  .env_export  .gitignore  .pre-commit-config.yaml  BUILD.bazel  Dockerfile  FIX_REMOVEMESSAGE_AFTER_AGENT.md  MODULE.bazel  MONOREPO-SETUP.md  Makefile  README.md  REFACTORING_SUMMARY.md  SECURITY_IMPROVEMENTS_IMPLEMENTED.md  TESTING-TOKEN-PROPAGATION.md  buf.gen.planton-cloud.yaml  buf.gen.project-planton.yaml  buf.yaml  langgraph.json  mypy.ini  pip.conf  pr-description-1762365582.md  pyproject.toml  run_langgraph.sh  test_blocking_fix.py  test_imports.py  test_mcp_blocking_fix.py  test_mcp_import_only.py  test_rds_agent.py  test_rds_agent_phase2.py  test_rds_agent_phase3.py
apis/stubs/python/dev/: pyproject.toml
apis/stubs/python/planton_cloud/: pyproject.toml
apis/stubs/python/project_planton/: pyproject.toml
src/: BUILD.bazel  __init__.py
src/agent_studio/: README.md  __init__.py  api.py  config_manager.py  registry.py
src/agent_studio/base/: __init__.py  base_agent_config.py  base_agent_state.py
src/agent_studio/deployment/: __init__.py  deployment_manager.py  langgraph_config.py  lifecycle.py  monitoring.py  version_control.py
src/agent_studio/mcp/: __init__.py  azure.py  azure_mcp.py  client_manager.py  gcp.py  gcp_mcp.py  planton.py
src/agent_studio/specializations/: __init__.py  architect.py  cost_optimizer.py  security_auditor.py  troubleshooter.py
src/agent_studio/templates/: __init__.py  aws_agent_template.py  azure_agent_template.py  gcp_agent_template.py
src/agent_studio/web/: __init__.py
src/agent_studio/web/templates/: agents.html  base.html  create_agent.html  dashboard.html  deployments.html  templates.html
src/agents/: BUILD.bazel  __init__.py
src/agents/aws_agent/: Makefile  README.md  __init__.py  configuration.py  credential_selector.py  graph.py  grpc_server.py  llm.py  mcp_integration.py  state.py
src/agents/aws_agent/mcp/: README.md  __init__.py  aws.py  client_manager.py  config.py  planton.py  tools.py
src/agents/aws_agent/nodes/: CREDENTIAL_SWITCHING.md  README.md  __init__.py  aws_deepagent.py  credential_selector.py  router.py
src/agents/aws_agent/subagents/: __init__.py  cost_optimizer.py  ecs_troubleshooter.py  security_auditor.py
src/agents/aws_agent/tools/: __init__.py  architecture.py  credentials.py  error_analysis.py
src/agents/aws_agent/utils/: __init__.py  session.py
src/agents/aws_ecs_service/: README.md  ROUTING.md  SUMMARY.md  __init__.py  agent.py  agent.yaml  configuration.py  credential_context.py  credential_tools.py  graph.py  mcp_tools.py  prompts.py  routing.py  state.py
src/agents/aws_ecs_service/contextualizer/: __init__.py  agent.py  mcp_tools.py  prompts.py  state.py
src/agents/aws_ecs_service/demos/: README.md  demo_credential_isolation.py  simple_credential_demo.py  standalone_credential_test.py
src/agents/aws_ecs_service/docs/: CREDENTIAL_ARCHITECTURE.md  CREDENTIAL_HANDLING.md  IMPLEMENTATION_STATUS.md
src/agents/aws_ecs_service/ecs_domain/: __init__.py  agent.py  prompts.py  state.py
src/agents/aws_ecs_service/operations/: __init__.py  agent.py  mcp_tools.py  prompts.py  state.py
src/agents/aws_ecs_service/supervisor/: README.md  __init__.py  configuration.py  graph.py  state.py  subagents.py
src/agents/aws_ecs_service/tests/: README.md  TEST_RESULTS.md  test_credential_sharing.py  verify_isolation.py
src/agents/aws_ecs_troubleshooter/: README.md  __init__.py  agent.py  credential_context.py  graph.py  instructions.py  mcp_tools.py
src/agents/aws_ecs_troubleshooter/archive_v1/: README.md  agent.py  graph.py
src/agents/aws_ecs_troubleshooter/docs/: comparison_example.md  context_subagent_architecture.md  deep_agents_migration.md  diagnostic_subagent_architecture.md  enhanced_features.md  think_tool_usage.md
src/agents/aws_ecs_troubleshooter/tests/: manual_test.py  test_context_subagent.py  test_day3_enhancements.py  test_diagnostic_subagent.py  test_enhanced_features.py  test_think_tool.py  test_troubleshooter.py  test_v2_agent.py
src/agents/aws_ecs_troubleshooter/tools/: __init__.py  context_tools.py  diagnostic_tools.py  enhanced_diagnostics.py  remediation_scenarios.py  remediation_tools.py  thinking_tools.py
src/agents/aws_fix_agent/: __init__.py  configuration.py  graph.py  llm_utils.py  mcp_utils.py  nodes.py  state.py
src/agents/aws_provisioning_fix_agent/: __init__.py  configuration.py  graph.py  llm_utils.py  mcp_utils.py  nodes.py  state.py
src/agents/aws_rds_instance_controller/: TESTING_NOTE.md  __init__.py  agent.py  graph.py  prompts.py
src/agents/aws_rds_instance_controller/docs/: README.md
src/agents/aws_rds_instance_creator/: TESTING.md  __init__.py  agent.py  graph.py  mcp_tool_wrappers.py  mcp_tools.py
src/agents/aws_rds_instance_creator/docs/: README.md
src/agents/aws_rds_instance_creator/middleware/: __init__.py  mcp_loader.py
src/agents/cloud_identity_resolver_agent/: __init__.py  configuration.py  graph.py  llm_utils.py  message_utils.py  nodes.py  state.py  utils.py
src/agents/context_coordinator/: __init__.py  agent.py  prompts.py  state.py
src/agents/ecs_deep_agent/: README.md  __init__.py  configuration.py  graph.py  main.py  mcp_tools.py  prompts.py  serve.py  state.py  subagents.py
src/agents/ecs_domain/: agent.py  mcp_tools.py  prompts.py  state.py
src/agents/rds_manifest_generator/: BUILD.bazel  DEMO_SCENARIOS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  README.md  USER_GUIDE.md  __init__.py  agent.py  config.py  graph.py  initialization.py  state.py
src/agents/session_subject_generator/: __init__.py  agent.py  graph.py
src/common/: __init__.py
src/common/repos/: MIGRATION_SUMMARY.md  README.md  __init__.py  config.py  fetcher.py  middleware.py
src/mcp/: __init__.py
src/mcp/planton_cloud/: README.md  __init__.py  entry_point.py  server.py
src/planton_cloud_mcp/: README.md  __init__.py  api_client.py  entry_point.py  server.py
src/planton_cloud_mcp/connect/: __init__.py
src/planton_cloud_mcp/infra_hub/: __init__.py
(+2358 files in other folders)
