load("@rules_python//python:defs.bzl", "py_binary", "py_library")

exports_files([
    "pyproject.toml",
    "poetry.lock",
    "langgraph.json",
])

# Library with the service sources
py_library(
    name = "graph_fleet_lib",
    srcs = glob([
        "src/**/*.py",
    ]),
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [
        "//apis/stubs:planton_cloud_python",
        "//apis/stubs:project_planton_python",
    ],
)
