"""
Graph Fleet - Bazel Module Configuration

This module defines the Bazel build configuration for the graph-fleet project.
It maintains compatibility with Poetry-based builds for LangGraph Cloud deployment
while enabling Bazel builds for local development and integration.
"""

module(
    name = "graph_fleet",
    version = "0.0.1",
)

# ─── Python toolchain ────────────────────────────────────────────────────────
bazel_dep(name = "rules_python", version = "1.5.3")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    # Match the Python version in pyproject.toml (requires-python = ">=3.11,<4.0")
    python_version = "3.11",
)
use_repo(python, "python_3_11")

# ─── Poetry lock -> Bazel deps via ofiuco ────────────────────────────────────
# ofiuco reads poetry.lock and exposes each package as a py_library target.
# This keeps Poetry as the single source of truth for dependencies, ensuring
# that both Poetry (for LangGraph Cloud) and Bazel use the same versions.
bazel_dep(name = "ofiuco", version = "0.5.2")

poetry = use_extension("@ofiuco//python:extensions.bzl", "poetry")
poetry.parse(
    name = "graph_fleet_poetry",
    lock = "//:poetry.lock",
    toml = "//:pyproject.toml",
)
use_repo(poetry, "graph_fleet_poetry")

