[tool.poetry]
name = "graph-fleet"
version = "0.0.1"
description = "Resolve cloud resource identities (IDs, ARNs, names) from natural language."
authors = ["Planton Cloud <engineering@planton.cloud>"]
license = "MIT"
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langgraph = ">=1.0.0,<2.0.0"
langgraph-cli = {extras = ["inmem"], version = "^0.4.7"}
langchain = ">=1.0.0,<2.0.0"
langchain-openai = ">=1.0.0,<2.0.0"
langchain-anthropic = ">=1.0.0,<2.0.0"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
langchain-mcp-adapters = ">=0.1.9,<0.2.0"
mcp = ">=1.0.0,<2.0.0"
aiofiles = ">=24.0.0,<25.0.0"
pydantic = ">=2.0.0,<3.0.0"
psycopg = {extras = ["binary", "pool"], version = ">=3.0.0,<4.0.0"}
langgraph-checkpoint-postgres = ">=3.0.0,<4.0.0"
deepagents = "0.2.0"

# Protobuf & validation
protobuf = "^6.32.0"
protovalidate = "0.13.0"
googleapis-common-protos = "1.70.0"

# Project Planton proto stubs from Buf registry
project-planton-apis-protocolbuffers-python = { version = "*", source = "buf-build" }
project-planton-apis-protocolbuffers-pyi = { version = "*", source = "buf-build" }

[tool.poetry.group.dev.dependencies]
ruff = ">=0.6.0"
mypy = ">=1.10.0"
types-pyyaml = "^6.0.12.20250915"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "buf-build"
url = "https://buf.build/gen/python"
priority = "supplemental"

[tool.ruff]
lint.select = ["E", "F", "I", "D", "UP"]
lint.ignore = ["D401", "D417", "E501"]
