"""
BUILD file for RDS Manifest Generator Agent

This agent helps users create valid AWS RDS Instance YAML manifests through
conversational interaction using LangGraph and the DeepAgents framework.
"""

load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "rds_manifest_generator",
    srcs = glob(
        ["**/*.py"],
        exclude = ["docs/**"],
    ),
    imports = ["../../.."],  # Allow imports like "from src.agents.rds_manifest_generator import ..."
    visibility = ["//visibility:public"],
    deps = [
        "//backend/services/graph-fleet/src:common",
        # LangChain and LangGraph dependencies from centralized poetry
        "@poetry//:langchain",
        "@poetry//:langchain-core",
        "@poetry//:langgraph",
        "@poetry//:langchain-anthropic",
        "@poetry//:langchain-openai",
        # DeepAgents framework
        "@poetry//:deepagents",
        # Utility dependencies
        "@poetry//:pyyaml",
        "@poetry//:pydantic",
        # NOTE: Planton Cloud API stubs are included from local proto stub targets
        # in the graph-fleet top-level BUILD.bazel file
    ],
)
