[tool.poetry]
name = "stubs-dev"
version = "0.0.0"
description = "Dev-only environment for generated Python stubs indexing in IDEs"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
protobuf = "6.32.0"
grpcio = "1.74.0"
typing-extensions = "4.14.1"
googleapis-common-protos = "1.70.0"
planton-cloud-stubs = { path = "../planton_cloud", develop = true }
project-planton-stubs = { path = "../project_planton", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
