[tool.poetry]
name = "planton-cloud-stubs"
version = "0.0.0"
description = "Generated Python stubs for Planton Cloud APIs (buf output committed in repo)"
package-mode = true
packages = [
  { include = "cloud", from = "." },
  { include = "buf", from = "." }  # include protovalidate-generated modules
]
include = ["**/*.pyi"]

[tool.poetry.dependencies]
python = "^3.11"
protobuf = ">=6.32.0,<7.0.0"
grpcio = ">=1.74.0,<2.0.0"
typing-extensions = "4.14.1"
googleapis-common-protos = "1.70.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
